<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNavDashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_nav_chip"
            android:paddingLeft="18dp"
            android:paddingTop="12dp"
            android:paddingRight="18dp"
            android:paddingBottom="12dp"
            android:text="@string/dashboard"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnNavClients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_nav_chip"
            android:paddingLeft="18dp"
            android:paddingTop="12dp"
            android:paddingRight="18dp"
            android:paddingBottom="12dp"
            android:text="@string/clients"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnNavWorkLogs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_nav_chip"
            android:paddingLeft="18dp"
            android:paddingTop="12dp"
            android:paddingRight="18dp"
            android:paddingBottom="12dp"
            android:text="@string/work_logs"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnNavPayments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_nav_chip"
            android:paddingLeft="18dp"
            android:paddingTop="12dp"
            android:paddingRight="18dp"
            android:paddingBottom="12dp"
            android:text="@string/payments"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnNavAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_nav_chip"
            android:paddingLeft="18dp"
            android:paddingTop="12dp"
            android:paddingRight="18dp"
            android:paddingBottom="12dp"
            android:text="@string/admin"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnNavLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_nav_chip"
            android:paddingLeft="18dp"
            android:paddingTop="12dp"
            android:paddingRight="18dp"
            android:paddingBottom="12dp"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</HorizontalScrollView>
